[package]
name = "crx2rnx"
version = "2.6.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX decompression command line utility"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/crx2rnx"
keywords = ["geo", "compression", "decompression"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies.rinex]
git = "https://github.com/nav-solutions/rinex"
rev = "eebd7c0de6e9b3f77cd909a70c76765e8ddc4516"
features = ["flate2"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }

