[package]
name = "crx2rnx"
version = "2.8.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX decompression command line utility"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/crx2rnx"
keywords = ["geo", "compression", "decompression"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
rinex = { git = "https://github.com/nav-solutions/rinex", rev = "7b1443f83d72e304c595ee8ef79dc870bd3fd65b", features = ["flate2"] }
clap = { version = "4.5", features = ["derive", "color"] }
